<resources>
    <string name="app_name">MobileComputingAssignment</string>
    <string name="gyroscope_label_x">Gyroscope x: %1$.2f</string>
    <string name="gyroscope_label_y">Gyroscope y: %1$.2f</string>
    <string name="gyroscope_label_z">Gyroscope z: %1$.2f</string>
    <string name="accelerometer_label_x">Accelerometer x: %1$.2f</string>
    <string name="accelerometer_label_y">Accelerometer y: %1$.2f</string>
    <string name="accelerometer_label_z">Accelerometer z: %1$.2f</string>
    <string name="error_no_sensor">No Sensor</string>
    <string name="triceps_percentage">%1$.2f</string>
    <string name="biceps_percentage">%1$.2f</string>
    <string name="russian_twist_percentage">%1$.2f</string>
    <string name="crunches_percentage">%1$.2f</string>

    <string name="activity_1_left_val">%1.2f</string>
    <string name="activity_1_right_val">%1.2f</string>
    <string name="activity_2_left_val">%1.2f</string>
    <string name="activity_2_right_val">%1.2f</string>
    <string name="activity_3_left_val">%1.2f</string>
    <string name="activity_3_right_val">%1.2f</string>
    <string name="activity_4_left_val">%1.2f</string>
    <string name="activity_4_right_val">%1.2f</string>
    <string name="activity_5_left_val">%1.2f</string>
    <string name="activity_5_right_val">%1.2f</string>
    <string name="activity_6_left_val">%1.2f</string>
    <string name="activity_6_right_val">%1.2f</string>
    <string name="activity_7_left_val">%1.2f</string>
    <string name="activity_7_right_val">%1.2f</string>
    <string name="activity_8_left_val">%1.2f</string>
    <string name="activity_8_right_val">%1.2f</string>
    <string name="activity_9_left_val">%1.2f</string>
    <string name="activity_9_right_val">%1.2f</string>
    <string name="activity_10_left_val">%1.2f</string>
    <string name="activity_10_right_val">%1.2f</string>
    <string name="activity_11_left_val">%1.2f</string>
    <string name="activity_11_right_val">%1.2f</string>
    <string name="activity_12_left_val">%1.2f</string>
    <string name="activity_12_right_val">%1.2f</string>

    <string name="classified_activity_left_val">%10s</string>
    <string name="classified_activity_right_val">%10s</string>

    <string name="loss_label_val">Loss: %f</string>

    <string-array name="activity_selection_spinner_entries">
        <item>Push-Ups</item>
        <item>Crunches</item>
        <item>Curls</item>
        <item>Triceps</item>
        <item>Russian Twist</item>
        <item>Walking</item>
        <item>Walking Upstairs</item>
        <item>Walking Downstairs</item>
        <item>Sitting</item>
        <item>Laying</item>
        <item>Standing</item>
        <item>Jumping</item>
        <item>Running</item>
    </string-array>

    <string-array name="transfer_learning_spinner_entries">
        <item>Walking</item>
        <item>Walking Upstairs</item>
        <item>Walking Downstairs</item>
        <item>Running</item>
    </string-array>
</resources>